<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share_read"
        android:title="@string/share"
        android:icon="@drawable/ic_share_read"
        app:showAsAction="always" />

    <item
        android:id="@+id/size_change"
        android:title="@string/size_text"
        android:icon="@drawable/ic_size_up_low"
        app:showAsAction="always" />

    <item
        android:title="@string/mode_night"
        android:id="@+id/swithnight"
        android:icon="@drawable/ic_sun"
        app:showAsAction="always" />

    <item
        android:title="@string/mode_night"
        android:id="@+id/icDownload"
        android:icon="@drawable/ic_download"
        app:showAsAction="always" />

</menu>